--- a/processing/index.template
+++ b/processing/index.template
@@ -122,7 +122,7 @@
 				display: inline;
 				font-size: 66%;
 				list-style: none;
-				padding: 0.33em 0.66em;
+				padding: 0.28em 0.66em 0.16em 0.66em;
 				white-space: nowrap;
 			}
 			
