#4 Fixed the border link buttons.

--- a/processing/index.template
+++ b/processing/index.template
@@ -200,6 +200,7 @@
 				
 				.links > ul > li > a:hover {
 					background-color: #f57900;
+					border: 1px solid #f57900;
 				}
 				
 				.section {
